experiments with jvm args